tests/programs/invalid/nested_types.java
public class nested_types {
  public class B {}
}